deploy/overlays/stg/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proof-sdk
  namespace: proof
  annotations:
    cert-manager.io/cluster-issuer: k8s-crt-mgr-iss-stg-apps-default
spec:
  tls:
    - hosts:
        - proof.stg.df-app.ch
      secretName: proof-sdk-tls
  rules:
    - host: proof.stg.df-app.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proof-sdk
                port:
                  number: 80
